--- a/AWS.XamarinSDK/packages/repositories.config
+++ b/AWS.XamarinSDK/packages/repositories.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\AWSSDK.iOS\packages.config" />
-  <repository path="..\AWSSDK_Android\packages.config" />
-  <repository path="..\AWSSDK_Core\packages.config" />
-  <repository path="..\AWSSDK_iOS\packages.config" />
-  <repository path="..\AWSSDK_Portable\packages.config" />
-  <repository path="..\AWSSDK_WP8\packages.config" />
+  <repository path="../AWSSDK.iOS/packages.config" />
+  <repository path="../AWSSDK_Android/packages.config" />
+  <repository path="../AWSSDK_Core/packages.config" />
 </repositories>
