use Xamarin.iOS instead of Mono

--- a/AWS.XamarinSDK/AWSSDK_iOS/AWSSDK_iOS.csproj
+++ b/AWS.XamarinSDK/AWSSDK_iOS/AWSSDK_iOS.csproj
@@ -3267,6 +3267,6 @@
   <ItemGroup>
     <EmbeddedResource Include="endpoints.xml" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
 </Project>
